Fix #1: Add !important to panel button color To overwrite color in default high contrast theme

--- a/scss/widgets/_panel.scss
+++ b/scss/widgets/_panel.scss
@@ -44,7 +44,7 @@ $panel_height: 1.86em;
   // panel menus
   .panel-button {
     font-weight: bold;
-    color: black;
+    color: black !important;
     -natural-hpadding: $base_padding * 2;
     -minimum-hpadding: $base_padding;
 
